# autograd_rs

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  chapter_1.html  chapter_2.html  chapter_3.html  index.html  intro.html  print.html  searchindex.js  searchindex.json  sources.html
.github/workflows/: main.yaml
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  intro.md  sources.md
book/src/chapter1/: chapter_1.md
book/src/learningByExample/: backward_ad.md  forward_ad.md  learning_by_example.md
chapter1/: chapter_1.html
examples/: forward_ad_book_example.rs  forward_ad_projectile_motion.rs  xor.rs
learningByExample/: backward_ad.html  forward_ad.html  learning_by_example.html
mnist_tensor/: Cargo.toml
mnist_tensor/src/: main.rs
src/: errors.rs  graph.rs  lib.rs  math.rs
src/forward_mode/: mod.rs
src/layer/: fully_connected.rs  mod.rs
src/ops/: activation.rs  binary_ops.rs  mod.rs  unary_ops.rs
src/optimization/: mod.rs  sgd.rs
