[package]
name = "mnist_tensor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd_rs = {path = "../"}
mnist = "0.4.1"
rand = "0.8.4"
ndarray = { version = "0.15.3", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
